--- a/index.html
+++ b/index.html
@@ -133,8 +133,12 @@
         <section  class="demosection">
             <div class="leftdemo">
                 <div class="imgdemo">
-                    <div class="moon"></div>
-                    <img src="./assets/img/daytonight.png" alt="">
+                    <div id="moonid" class="moon">
+                        <img src="./assets/img/moon.png" alt=""  width="130px"> 
+                    </div>
+                    <img src="./assets/img/star.png" alt="">
+
+                    <img src="./assets/img/nightsky.png" alt="">
                 </div>
             </div>
             <div class="decoration">
@@ -179,6 +183,7 @@
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-        
+        <script src="./assets/libs/jquery-3.6.4.min.js"></script>
+        <script src="./app.js"></script>
     </body>
 </html>
