--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <section  class="demosection">
             <div class="leftdemo">
                 <div class="imgdemo">
-                    <div id="moonid" class="moon">
+                    <div id="moonid" class="moon moonani">
                         <img src="./assets/img/moon.png" alt=""  width="130px"> 
                     </div>
                     <img src="./assets/img/star.png" alt="">
