--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <section  class="demosection">
             <div class="leftdemo">
                 <div class="imgdemo">
-                    <div id="moonid" class="moon moonani">
+                    <div id="moonid" class="moon  ">
                         <img src="./assets/img/moon.png" alt=""  width="130px"> 
                     </div>
                     <img src="./assets/img/star.png" alt="">
@@ -178,6 +178,10 @@
                     </div>
                </div>
             </div>
+        </section>
+
+        <section class="demosection2">
+
         </section>
            
 
